css/style.css
/* ... */
.burger-menu-popUp li:active {
  font-weight: 400;
  background-image: url(../images/icons/hover-effects/Hover-effect-line-black-bold.svg);
  background-size: cover;
  background-position: center;
}
/*ICONS HOVER EFFECTS*/
#footer-SoMe li:hover {
  background-image: url(../images/icons/hover-effects/Hover-effect-round-yellow.svg);
  background-size: cover;
  background-position: center;
}
/*---------- PORTFOLIO ----------*/

.main-portfolio {
  margin: 0;
  justify-items: left;
}

.portfolio-video-container {
  background-image: url(../images/placeholder-image.jpg);
  aspect-ratio: 9/16;
  height: 100%;
  width: 100%;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  position: relative;
  display: grid;
}

.portfolio-video-container a {
  justify-self: center;
  align-self: end;
}

.portfolio-feature-container {
  display: grid;
  grid-template-columns: 1fr;
  position: relative;
}

.portfolio-feature-text {
  margin: var(--double-margin);
  margin-bottom: var(--half-margin);
}

.portfolio-events-text {
  margin: var(--double-margin);
  margin-bottom: var(--half-margin);
}

.portfolio-events-container {
  display: grid;
  grid-template-columns: 1fr;
  position: relative;
}

.main-portfolio h2 {
  margin-top: calc(var(--half-margin) / 2);
  margin-bottom: var(--half-margin);
}

.featured-event-image {
  aspect-ratio: 5/3;
  object-fit: cover;
  margin-top: var(--half-margin);
}

.event-credits {
  text-align: right;
  z-index: 2;
}

.portfolio-events-container .yellow-button {
  margin-top: -1.5em;
  justify-self: center;
}

.portfolio-feature-container .yellow-button {
  margin-top: -1.5em;
  justify-self: center;
}

.portfolio-instagram-container {
  margin: var(--double-margin);
  display: grid;
  grid-template-columns: 1fr;
  justify-items: center;
}

.portfolio-instagram-container h4 {
  margin-top: var(--half-margin);
}

.portfolio-instagram-container h4 a {
  font-family: var(--text-font);
  text-decoration: none;
  text-transform: uppercase;
  color: var(--color4);
}

.portfolio-instagram-container img {
  aspect-ratio: 1/1;
  object-fit: cover;
  margin-top: var(--half-margin);
}

/*---------- PORTFOLIO - LIST ----------*/

.main-portfolio-list {
  margin: var(--margin);
  gap: var(--half-margin);
}

.main-portfolio-list h1 {
  font-family: var(--header-font);
}

.main-portfolio-list h2 {
  font-family: var(--text-font);
  font-size: 1.2rem;
}

.portfolio-list-card {
  max-width: 100%;
  position: relative;
  background-color: var(--accent-color);
}

.portfolio-list-link {
  text-decoration: none;
  width: 100%;
  position: relative;
  display: grid;
  grid-template-columns: 1fr;
}

.portfolio-list-image:hover {
  filter: opacity(50%);
}

.portfolio-list-image {
  max-width: 100%;
  display: block;
  /* aspect-ratio: 1/1; */
  object-fit: cover;
  z-index: 1;
}

.portfolio-list-text {
  color: var(--primary-color);
  z-index: 3;
  position: absolute;
  align-self: end;
  margin: var(--half-margin);
  visibility: hidden;
}

.portfolio-list-title {
  font-family: var(--text-font);
  font-weight: 900;
  text-transform: lowercase;
  font-size: 2.5em;
}

.portfolio-list-category {
  font-family: var(--text-font);
  text-transform: uppercase;
  font-weight: 400;
}

.portfolio-list-card :hover .portfolio-list-text {
  visibility: visible;
}

/*---------- PORTFOLIO - ARTWORK ----------*/

.main-portfolio-artwork {
  justify-items: left;
}

.artwork-container {
  max-width: 100%;
  position: relative;
  margin: var(--half-margin);
}

.artwork-image {
  max-width: 100%;
  aspect-ratio: 1/1;
  object-fit: cover;
}

.artwork-text {
  margin-top: var(--half-margin);
  margin-bottom: var(--half-margin);
}

.artwork-title {
  font-family: var(--header-font);
  background-color: var(--accent-color);
  width: fit-content;
  padding: 0.2em;
  margin-top: var(--half-margin);
}

.artwork-category {
  font-family: var(--text-font);
  text-transform: uppercase;
  font-size: 140%;
}

.artwork-description {
  margin-top: var(--margin);
}

/*---------- ABOUT PAGE ----------*/

.main-about-page{
  display: grid;
  margin: 0;
  grid-template-columns: 1fr;
}


.welcome-about-bg{
  grid-column: 1;
  display: grid;
  justify-items: center;
  align-items: center;
  width: 100%;
  margin: 0;
  padding: 0;
  background-color: var(--primary-color);
  aspect-ratio: 3/4;

}

.about-welcome-img-container{
  display: block;
  justify-items: center;
  width: 100%;
  aspect-ratio: 16/9;
}
.container-welcome-img{
  grid-column: 1;
}
img.about-welcome-img{
  grid-column: 1;
  max-width: 100%;
  /* margin: var(--double-margin); */
}

.rara-img{
  width: 100%;
}
#about_description {
  margin: var(--margin);
}
#about_description > p{
  padding-top: 0.5rem;
  padding-bottom: .5rem;
  text-align: justify;
}

#about_description > h2,
#about_contacts > h2,
.form-container > h2{
  text-align: center;
  margin-bottom: var(--half-margin);
}
#about_description > h3{
  margin: var(--half-margin);
}

#about_contacts{
  margin: var(--margin);
}
ul li{
  padding: 0.5em;
}

/* contact me */

.container-SoMe{
  display: inline-block;
}
.icon{
  vertical-align: middle;
}
.txt{
  text-align: inherit;
}



/* form */
.form-container{
  width: 100%;
}
form{
  margin: var(--margin);
}
div{
  font-family: var(--text-font);
  padding: 1em;
}
form>div>label{
  padding-bottom: 1rem;
}


input[type=text],textarea{
  width: 100%;
  padding: 0.5rem 0.5rem;
  border: 1px solid #ccc;
  border-radius: 4px;
  resize: vertical;
  cursor: pointer;
}
input[type=radio]{
  cursor: pointer;
  margin-right: 1rem;
}
.form-name-contact{
display: flex;
flex-direction: column;
align-items: flex-start;

}
.form-option-box{
  border: 1px solid #ccc;
  border-radius: 4px;
  margin-left: var(--half-margin);
  margin-bottom: 1rem;
}

input[type=submit]{
  cursor: pointer;
  float: right;
}

input[type=submit]:hover {
  background-color: var(--accent-color);
}
/* ... */

